# collector-agent

./: .gitignore  README.md  config.default.yaml  pyproject.toml  requirements.txt  setup.py
collector/: __init__.py  __main__.py  cli.py  collector.py  config.py  daemon.py  display.py  parser.py  sender.py  transformer.py
collector/exporters/: __init__.py  base.py  node.py  nvidia.py
scripts/: install.sh  setup-exporters.sh  update.sh
systemd/: collector-agent.logrotate  collector-agent.service
tests/: __init__.py  conftest.py  test_cli.py  test_collector.py  test_config.py  test_daemon.py  test_exporters.py  test_parser.py  test_transformer.py
